--- a/rlgl/package.json
+++ b/rlgl/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node_modules/.bin/supervisor app"
   },
   "dependencies": {
     "express": "3.4.0",
-    "jade": "*"
+    "jade": "*",
+    "supervisor": "0.4.x"
   }
 }
